--- a/FitnessTracker/Info.plist
+++ b/FitnessTracker/Info.plist
@@ -4,7 +4,9 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Font Awesome 5 Free-Solid-900.otf</string>
+		<string>Font Awesome 5 Pro-Regular-400.otf</string>
+		<string>MuseoSansRounded500.otf</string>
+		<string>MuseoSansRounded900.otf</string>
 	</array>
 </dict>
 </plist>
